packages/lang/test/__golden__/config-errors/unknown-config-key.txt
error[TF020]: unknown config key `headr`
 --> tflw.config:2:3
  |
2 |   headr "Accept" is "application/json"
  |   ^^^^^
  |
  = help: did you mean `header`?
